--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,14 +2,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 li {
     list-style: none;
-}
-header {
-    height: 15vh;
-    width: 100vw;
 }
 a {
     text-decoration: none;
@@ -20,27 +16,168 @@ a {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    padding: 22px 30px;
+    width: 100vw;
+    height: 13vh;
+    padding: 2vh 1vw ;
+    background-color: aliceblue;
 }
 #menu-header {
     display: flex;
-    gap: 20px;
-    font-size: x-large;
-    padding-top: 10px;
+    gap: 2vw;
+    font-size: 2vw;
+    padding-top: 1vh;
+    font-weight: bold;
 }
 #logo {
-    border-radius: 100%;
-    width: 70px;
-    height: 70px;
     background-color: orange;
+    
 }
 #baner{
     height: 60vh;
     width: 100vw;
-    position: relative;
-    opacity: 60%;
+    opacity: 30%;
 }
-#fundo{
-    background-color: rgb(99, 99, 255);
+#fundo {   
+    background-color: rgba(1, 13, 90, 0.856);
+}
+#text-baner {
+    position: absolute;
+    top: 40vh;
+    left: 15vw;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    font-size: 4vw;
+}
+#text-baner-span {
+    position: absolute;
+    top: 40vh;
+    right: -10vw;
+    transform: translate(-50%, -50%);
+    color: rgb(255, 255, 255);
+    font-size: 3vw;
+}
+#linha{
+    background-color: aliceblue;
+    height: 1vh;
+}
+#sobre-nos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10vh;
+    height: 80vh;
+}
+#barra-lateral {
+    width: 1vw;
+    height: 100%;
+    background-color: rgba(1, 13, 90, 0.856);
+}
+#span-box {
+    background-color: #dcdcdc;
+    width: 80vw;
+    height: 100%;
+    padding: 2vw;
+}
+#titulo-span-box{
+    text-align: center;
+    padding: 2vh;
+    color: rgba(2, 10, 65, 0.856);
+    font-weight: bold;
+    margin-bottom: 80px;
+    font-size: 3vw;
+}
+#text-span-box{
+    font-size: 1.5vw;
+    text-align: justify;
+}
+#divisao{
+    height: 0.3vh;
+    width: 50vw;
+    background-color: rgb(78, 78, 83);
+    margin: auto;
+    margin-bottom: 120px;
+    margin-top: 50px;
+}
+#transp-veiculo{
+    width: 45vw;
+}
+#transp-veiculo-text{
+    color: #3c74b4;
+    font-weight:500;
+    font-size: 3vw;
+    margin: auto;
+}
+#servicos{
+    display: flex;
+    width: 80vw;
+    margin: auto;
+    margin-bottom: 10vh;
+}
+#text-depoimentos-1{
+    width: 40vw;
+    display: flex;
+    flex-direction: column;
+    float: left;
+    padding-left: 10vw;
+    margin-bottom: 5vh;
+    font-style: italic;
+}
+#text-depoimentos-2{
+    width: 40vw;
+    display: flex;
+    flex-direction: column;
+    float: right;
+    padding-right: 10vw;
+    margin-bottom: 5vh;
+    font-style: italic;
+}
+#text-span-box-depoimentos{
+    font-size: 3vh;
+    text-align: center;
+}
+#titulo-depoimentos{
+    color: #3c74b4;
+    font-weight:500;
+    font-size: 2vw;
+    text-align: center;
+}
+#contato{
+    background-color: #dcdcdc;
+    height: auto;
+    width: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-bottom: 5vh;
+}
+#email{
+    width: 80%;
+    background-color: #c4c4c4;
+    margin: auto;
+    margin-bottom: 4vh;
+}
+#text-form{
+    font-weight: bold;
+    margin-left: 10%;
+}
+#exampleFormControlTextarea1{
+    width: 80%;
+    background-color: #c4c4c4;
+    margin: auto;
+    margin-bottom: 4vh;
+}
+#icon{
+    width: 20%;
+    display: block;
+    margin: auto;
+}
+#icon-container{
+    display: flex;
+    flex-direction: row;
+}
+#icon-box{
+    width: 30%; /* Ajuste o tamanho conforme necessário */
+    text-align: center;
+    margin-bottom: 3vh;
 }
