--- a/css/estilo.css
+++ b/css/estilo.css
@@ -29,7 +29,7 @@ a {
     font-weight: bold;
 }
 #logo {
-    background-color: orange;
+    background-color: rgba(255, 166, 0, 0);
     
 }
 #baner{
